--- a/src/app/pessoa/pessoa-lista/pessoa-lista.component.html
+++ b/src/app/pessoa/pessoa-lista/pessoa-lista.component.html
@@ -1,6 +1,9 @@
 <div class="card">
     <div class="card-header">
-
+        <div class="float-left"><h4>Pessoas</h4></div>
+        <div class="float-right">
+            <button class="btn btn-primary" [routerLink]="['add']">Novo Cadastro</button>
+        </div>
     </div>
     <div class="card-body">
         <table class="table table-hover" *ngIf="pessoas$ | async as pessoas; else loading" >
