--- a/src/app/pessoa/pessoa-form/pessoa-form.component.html
+++ b/src/app/pessoa/pessoa-form/pessoa-form.component.html
@@ -14,6 +14,6 @@
     </div>
     <div style="margin-top: 20px;">
         <button [disabled]="!form.valid" type="submit" class="btn btn-primary" (click)="onSubmit()">Salvar</button>
-        <button type="button" class="btn btn-default" (click)="onCancel()">Cancelar</button>
+        <button [style.display]="isEditar() ? 'none' : ''" type="button" class="btn btn-default" (click)="onCancel()">Cancelar</button>
     </div>
 </form>
