--- a/src/app/pessoa/pessoa-form/pessoa-form.component.html
+++ b/src/app/pessoa/pessoa-form/pessoa-form.component.html
@@ -1,19 +1,62 @@
-<form novalidate [formGroup]="form" class="need-validation">
-    <div class="row" style="margin-top: 20px;">
+<div class="panel panel-default">
+  <div [style.display]="!isEditar() ? 'none' : ''" class="panel-heading">
+    <h1>Editar Cadastro</h1>
+  </div>
+  <div [style.display]="isEditar() ? 'none' : ''" class="panel-heading">
+    <h1>Inserir Cadastro</h1>
+  </div>
+  <div class="panel-body">
+    <form novalidate [formGroup]="form" class="need-validation">
+      <div class="row" style="margin-top: 20px;">
         <div class="col-md-12 col-12">
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" placeholder="Nome" class="form-control" formControlName="nome">
-        </div><div class="col-md-6 col-12">
-            <label for="nome">CPF</label>
-            <input type="text" id="cpf" placeholder="CPF" class="form-control" formControlName="cpf">
+          <label for="nome">Nome</label>
+          <input
+            type="text"
+            id="nome"
+            placeholder="Nome"
+            class="form-control"
+            formControlName="nome"
+          />
         </div>
         <div class="col-md-6 col-12">
-            <label for="dataNascimento">Data Nascimento</label>
-            <input type="date" id="dataNascimento" placeholder="" class="form-control" formControlName="dataNascimento">
+          <label for="nome">CPF</label>
+          <input
+            type="text"
+            id="cpf"
+            placeholder="CPF"
+            class="form-control"
+            formControlName="cpf"
+          />
         </div>
-    </div>
-    <div style="margin-top: 20px;">
-        <button [disabled]="!form.valid" type="submit" class="btn btn-primary" (click)="onSubmit()">Salvar</button>
-        <button [style.display]="isEditar() ? 'none' : ''" type="button" class="btn btn-default" (click)="onCancel()">Cancelar</button>
-    </div>
-</form>
+        <div class="col-md-6 col-12">
+          <label for="dataNascimento">Data Nascimento</label>
+          <input
+            type="date"
+            id="dataNascimento"
+            placeholder=""
+            class="form-control"
+            formControlName="dataNascimento"
+          />
+        </div>
+      </div>
+      <div style="margin-top: 20px;">
+        <button
+          [disabled]="!form.valid"
+          type="submit"
+          class="btn btn-primary"
+          (click)="onSubmit()"
+        >
+          Salvar
+        </button>
+        <button
+          [style.display]="isEditar() ? 'none' : ''"
+          type="button"
+          class="btn btn-default"
+          (click)="onCancel()"
+        >
+          Cancelar
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
