--- a/src/app/pessoa/pessoa-form/pessoa-form.component.html
+++ b/src/app/pessoa/pessoa-form/pessoa-form.component.html
@@ -18,8 +18,10 @@
             formControlName="nome"
           />
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-6 col-12">
-          <label for="nome">CPF</label>
+          <label for="nome">CPF (Digite somente números)</label>
           <input
             type="text"
             id="cpf"
