--- a/src/app/pessoa/pessoa-lista/pessoa-lista.component.html
+++ b/src/app/pessoa/pessoa-lista/pessoa-lista.component.html
@@ -8,7 +8,27 @@
     </div>
   </div>
   <div class="card-body">
-    
+    <div class="row" style="margin-bottom: 20px;">
+      <div class="col-md-6 col-12">
+        <label for="nome">Pesquisa por CPF (Digite somente números)</label>
+        <input type="text" class="form-control" [(ngModel)]="pesquisaCpf" />
+      </div>
+      <div class="col-md-6 col-12">
+        <br />
+        <button class="btn btn-primary" (click)="onPesquisaCpf()">
+          PESQUISAR
+        </button>
+
+        <button
+            #btnLimparPesquisa
+          class="btn btn-default"
+          (click)="onLimparPesquisaCpf()"
+          ng-show="isPesquisaCpf()"
+        >
+          LIMPAR PESQUISA
+        </button>
+      </div>
+    </div>
     <table
       class="table table-hover"
       *ngIf="pessoas$ | async as pessoas; else loading"
