--- a/src/app/pessoa/pessoa-lista/pessoa-lista.component.html
+++ b/src/app/pessoa/pessoa-lista/pessoa-lista.component.html
@@ -70,7 +70,7 @@
 
 <ng-template #deleteModal>
   <div class="modal-body text-center">
-    <p>Tem certeza que deseja remover esse curso</p>
+    <p>Tem certeza que deseja remover esse cadastro?</p>
     <button type="button" class="btn btn-default" (click)="onConfirmDelete()">
       Sim
     </button>
